--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
     position: relative;
     animation: fade 0.5s;
 }
-
 @keyframes fade {
     0%   { opacity: 0; }
     100% { opacity: 1; }
@@ -30,19 +29,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-  }
+}
 .slide div:hover{
     min-height: 100%;
 }
-    
 .slide div p{
     margin-bottom: 0;
     color: #fff;
     padding: 10px;
     transition: font-size 0.5s;
 }
-
+.slide div:hover p{
+    font-size: 3rem;
+}
 .prev , .next{
     position: absolute;
     background-color: #0009;
