--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height:5%;
-  background-color: blue;
+  height:30px;
+  background-color: black;
   color: white;
   text-align: center;
 }
